switch to google-java-format for better readability